test/modules/lydia/inFunc.good
inFunc.chpl:3: error: Modules must be declared inside modules or at file-scope
Note: This source location is a guess.
